--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,14 @@
+# =============================
+# railway.toml
+# =============================
+
 [build]
 command = "pip install -r requirements.txt"
-
 
 [deploy]
 command = "python main.py"
 
-
 [cron]
-# Runs every 15 minutes
+# Runs every 15 minutes (UTC)
 schedule = "*/15 * * * *"
 command = "python main.py"
